GNOME Bugzilla – Bug 669131
Bookmarks and History search entry uses wrong clear icon
Last modified: 2012-02-07 20:25:21 UTC
Bookmarks and History search entry uses the color broom icon for clearing the entry. It should use the symbolic version.
Created attachment 206545 [details] screenshot
Created attachment 206669 [details] [review] ephy-search-entry: use symbolic clear icon Instead of gtk+ stock icon, use the symbolic version. Respects LTR/RTL.
Review of attachment 206669 [details] [review]: ::: lib/widgets/ephy-search-entry.c @@ +154,3 @@ + GTK_ENTRY_ICON_SECONDARY, + ltr ? "edit-clear-symbolic" : + "edit-clear-rtl-symbolic"); Is there API for this? Because it feels a bit weird. Specially considering the rtl/ltr thing.
Review of attachment 206669 [details] [review]: I suppose since it's using the icon name directly RTL support cannot be automatic? This is good enough for now though. ::: lib/widgets/ephy-search-entry.c @@ +150,2 @@ entry->priv = EPHY_SEARCH_ENTRY_GET_PRIVATE (entry); + ltr = (gtk_widget_get_default_direction () == GTK_TEXT_DIR_LTR); Don't really need the parenthesis here.
Done. Thanks :-) Attachment 206669 [details] pushed as 0bcf4b4 - ephy-search-entry: use symbolic clear icon