ephy-search-entry: use symbolic clear icon

Instead of gtk+ stock icon, use the symbolic version.  Respects LTR/RTL.

https://bugzilla.gnome.org/show_bug.cgi?id=669131